ghc-4335c07/testsuite/tests/generics/T10604/T10604_bad_variable_occurrence.stderr

T10604_bad_variable_occurrence.hs:8:12: error:
    • Can't make a derived instance of ‘Generic1 Fix’:
        Constructor ‘In’ applies a type to an argument involving the last parameter
                         but the applied type is not of kind * -> *
    • In the newtype declaration for ‘Fix’
